PY_04
'''
def add(a,b):
  result = a + b
  return result
'''

'''
>>> def sub(a,b):
...     return a - b
... 
>>> result = sub(a=7, b=3)
>>> print(result)
4
>>> result = sub(b=5, a=3)
>>> print(result)
-2
>>> def add_many(*args):
...     result = 0
...     for i in args:
...         result = result + i
...     return result
... 
>>> result = add_many(1,2,3)
>>> print(result)
6
>>> result = add_many(1, 2, 3, 4, 5, 6, 7, 8, 9, 10)
>>> print(result)
55
>>> def add_mul(choise, *args):
...     if choise == "add":
...        result = 0
  File "<stdin>", line 3
    result = 0
              ^
IndentationError: unindent does not match any outer indentation level
>>> def print_kwargs(**kwargs):
...     print(kwargs)
... 
>>> print_kwargs(ㅁ=1)
{'ᄆ': 1}
>>> print_kwargs(a=1)
{'a': 1}
>>> print_kwargs(name='foo', age=3)
{'name': 'foo', 'age': 3}
>>> 

'''
'''
def say_myself(name, age, man=True):
    print("나의 이름은 %s입니다." % name)
    print("나이는 %d살입니다." % age)
    if man:
        print("남자입니다.")
    else:
            print("여자입니다.")
'''
'''
def say_myself(name, man=True, age):
    print("나의 이름은 %s입니다." % name)
    print("나이는 %d살입니다." % age)
    if man:
        print("남자입니다.")
    else:
        print("여자입니다.")
'''
'''
a = 1
def vartest(a):
    a = a + 1
vartest(a)
print(a)
'''

'''
a = 1
def vartest(a):
  a = a + 1
  return a

a = vartest(a)
print(a)
'''

'''
add = lambda a,b: a + b
result = add(3,4)
print(result)
'''

'''
def add(a,b):
    return a + b

result = add(3,4)
print(result)
'''

'''
>>> a = input()
Life is too short, you need python
>>> a 
'Life is too short, you need python'
>>> 
'''






